--- a/.github/workflows/xtb-bot.yml
+++ b/.github/workflows/xtb-bot.yml
@@ -1,27 +1,13 @@
 name: XTB Bot Alerts
 
-"on":
+on:
   schedule:
     - cron: "*/15 * * * *"
   workflow_dispatch:
 
 jobs:
-  run:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: pip install yfinance requests feedparser deep-translator
-
-      - name: Run bot
-        run: python ahoj.py
-        env:
-          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
-          CHATID: ${{ secrets.CHATID }}
+      - name: Ping
+        run: echo "scheduled run OK"
