--- a/.github/workflows/xtb-bot.yml
+++ b/.github/workflows/xtb-bot.yml
@@ -1,68 +1,63 @@
-name: XTB Bot (CZ) – Radar + Reporty + Alerty
+name: Investicni Radar Bot
 
 on:
-  schedule:
-    - cron: "*/15 * * * *"   # každých 15 minut (UTC)
   workflow_dispatch:
+    inputs:
+      job:
+        description: "Co spustit: radar / study / portfolio"
+        required: true
+        default: "radar"
+        type: choice
+        options:
+          - radar
+          - study
+          - portfolio
+
+  schedule:
+    # Denně radar v 07:05 CET (GitHub cron je UTC -> 06:05 UTC ~ 07:05 CET v zimě)
+    - cron: "5 6 * * *"
+    # Studie 3× týdně v 18:10 CET (17:10 UTC)
+    - cron: "10 17 * * 1,3,5"
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Restore state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: xtb-state-${{ github.run_id }}
-          restore-keys: |
-            xtb-state-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests feedparser yfinance matplotlib deep-translator
+          pip install requests feedparser pyyaml python-telegram-bot==21.6
 
-      - name: Run bot
+      - name: Run (scheduled)
+        if: github.event_name == 'schedule'
         env:
-          # Telegram
-          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
-          CHATID: ${{ secrets.CHATID }}
-
-          # FMP
-          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
-
-          # Čas / okna
-          TIMEZONE: "Europe/Prague"
-          PREMARKET_TIME: "12:00"
-          EVENING_TIME: "20:00"
-          ALERT_START: "12:00"
-          ALERT_END: "21:00"
-          ALERT_THRESHOLD: "3"
-
-          # News + radar
-          NEWS_PER_TICKER: "2"
-          OPPORTUNITY_MAX: "5"
-          OPPORTUNITY_WEEKDAYS_ONLY: "true"
-
-          # Email (1× denně – posílá se v 12:00 reportu)
-          EMAIL_ENABLED: "true"
-          EMAIL_SENDER: "berq1994@gmail.com"
-          EMAIL_RECEIVER: "berq1994@gmail.com"
-          GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
+          FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          python ahoj.py
+          # config.yml používá env jako fallback
+          python ahoj.py --mode cron_radar
 
-      - name: Save state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: xtb-state-${{ github.run_id }}
+      - name: Run (manual)
+        if: github.event_name == 'workflow_dispatch'
+        env:
+          FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+        run: |
+          if [ "${{ inputs.job }}" = "radar" ]; then
+            python ahoj.py --mode cron_radar
+          elif [ "${{ inputs.job }}" = "study" ]; then
+            python ahoj.py --mode cron_study
+          else
+            python ahoj.py --mode print_portfolio
+          fi
